--- a/store/templates/store/purchaseorder.html
+++ b/store/templates/store/purchaseorder.html
@@ -5,7 +5,7 @@
 
     <div class="row grid-responsive">
         <div class="column ">
-            <!--<div class="card">
+            <div class="card">
                 <div class="card-title">
                     <h3>New Purchase Order</h3>
                 </div>
@@ -25,7 +25,7 @@
                         </fieldset>
                     </form>
                 </div>
-            </div>-->
+            </div>
             <div class="card">
                 <div class="card-title">
                     <h3>Product Detail</h3>
@@ -39,7 +39,7 @@
                             <td>{{formd.rate}}</td>
                             <td><input class="button-primary" type="submit" value="Submit"></td>
                         </tr>
-                        <input type="hidden" value="1" name="purchaseorder" />
+                        <input type="hidden" value={{id}} name="purchaseorder" />
                     </form>
 
                     <table>
