--- a/templates/index.html
+++ b/templates/index.html
@@ -69,6 +69,7 @@
 	
 	<script src="{% static 'js/chart.min.js' %}"></script>
 	<script src="{% static 'js/chart-data.js' %}"></script>
+	<script src="{% static 'js/kaquery.js' %}"></script>
 
 </body>
 </html> 
